--- a/force-app/main/default/classes/HolidayListTest.cls
+++ b/force-app/main/default/classes/HolidayListTest.cls
@@ -6,24 +6,18 @@ private class HolidayListTest {
 
     @testSetup 
     static void setup() {
-        // 既存のレコードは削除しておく
-        // 営業時間が紐づいていると紐付けの情報も設定から削除する必要がある。(プログラムで削除できない)
-        List<Holiday> oldHolidayList = [SELECT Id, Name, Description, ActivityDate FROM Holiday];
-//        for(Holiday h : oldHolidayList) {
-//            System.debug(h);
-//        }
-		delete oldHolidayList;
-        
+        // 設定画面から休日レコードが取得でき、営業時間が紐づいていると削除できない
+        // 試験用のレコードと区別できるよう仕組みを入れる。 Name をテストコード固有のテキストにするなど。
         List<Holiday> holidayList = new List<Holiday>();
 
         holidayList.add(new Holiday(
-            Name = '2024年4月29日',
+            Name = 'HolidayListTest 2024年4月29日',
             IsAllDay = true, IsRecurrence = false,
             ActivityDate = Date.newInstance(2024, 4, 29)
         ));
 
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 平日',
+            Name = 'HolidayListTest 2024年5月1日 平日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursEveryWeekday',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -33,7 +27,7 @@ private class HolidayListTest {
         ));
 
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎日3日ごと',
+            Name = 'HolidayListTest 2024年5月1日 毎日3日ごと',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursDaily',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -43,7 +37,7 @@ private class HolidayListTest {
         ));
 
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 隔週土日',
+            Name = 'HolidayListTest 2024年5月1日 隔週土日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursWeekly',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -54,7 +48,7 @@ private class HolidayListTest {
         ));
 
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 2ヶ月毎 12日',
+            Name = 'HolidayListTest 2024年5月1日 2ヶ月毎 12日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursMonthly',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -63,9 +57,19 @@ private class HolidayListTest {
             RecurrenceDayOfMonth = 12,
             RecurrenceInterval = 2
         ));
+        holidayList.add(new Holiday(
+            Name = 'HolidayListTest 2024年5月14日 2ヶ月毎 17日',
+            IsAllDay = true, IsRecurrence = true,
+            RecurrenceType = 'RecursMonthly',
+            ActivityDate = Date.newInstance(2024, 5, 19),
+            RecurrenceStartDate = Date.newInstance(2024, 5, 19),
+            RecurrenceEndDateOnly = null,
+            RecurrenceDayOfMonth = 17,
+            RecurrenceInterval = 2
+        ));
 
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎月第１週月曜',
+            Name = 'HolidayListTest 2024年5月1日 毎月第１週月曜',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursMonthlyNth',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -76,7 +80,7 @@ private class HolidayListTest {
             RecurrenceInterval = 1
         ));
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎月最終週木曜',
+            Name = 'HolidayListTest 2024年5月1日 毎月最終週木曜',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursMonthlyNth',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -86,9 +90,10 @@ private class HolidayListTest {
             RecurrenceInstance = 'Last',
             RecurrenceInterval = 1
         ));
+        // TODO: 通過していないパスを通るようにレコードを追加登録する
 
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎年1月13日',
+            Name = 'HolidayListTest 2024年5月1日 毎年1月13日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearly',
             ActivityDate = Date.newInstance(2024, 1, 13),
@@ -98,7 +103,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'January'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎年3月13日',
+            Name = 'HolidayListTest 2024年5月1日 毎年3月13日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearly',
             ActivityDate = Date.newInstance(2024, 3, 1),
@@ -108,7 +113,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'March'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎年5月13日',
+            Name = 'HolidayListTest 2024年5月1日 毎年5月13日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearly',
             ActivityDate = Date.newInstance(2024, 5, 1),
@@ -118,7 +123,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'May'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎年7月13日',
+            Name = 'HolidayListTest 2024年5月1日 毎年7月13日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearly',
             ActivityDate = Date.newInstance(2024, 7, 1),
@@ -128,7 +133,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'July'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎年9月13日',
+            Name = 'HolidayListTest 2024年5月1日 毎年9月13日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearly',
             ActivityDate = Date.newInstance(2024, 9, 1),
@@ -138,7 +143,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'September'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年5月1日 毎年11月13日',
+            Name = 'HolidayListTest 2024年5月1日 毎年11月13日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearly',
             ActivityDate = Date.newInstance(2024, 11, 1),
@@ -149,7 +154,7 @@ private class HolidayListTest {
         ));
 
         holidayList.add(new Holiday(
-            Name = '2024年2月1日 毎年2月第1月曜日',
+            Name = 'HolidayListTest 2024年2月1日 毎年2月第1月曜日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearlyNth',
             ActivityDate = Date.newInstance(2024, 2, 1),
@@ -160,7 +165,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'February'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年4月1日 毎年4月第2月曜日',
+            Name = 'HolidayListTest 2024年4月1日 毎年4月第2月曜日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearlyNth',
             ActivityDate = Date.newInstance(2024, 4, 1),
@@ -171,7 +176,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'April'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年6月1日 毎年6月第3月曜日',
+            Name = 'HolidayListTest 2024年6月1日 毎年6月第3月曜日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearlyNth',
             ActivityDate = Date.newInstance(2024, 6, 1),
@@ -182,7 +187,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'June'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年8月1日 毎年8月第4月曜日',
+            Name = 'HolidayListTest 2024年8月1日 毎年8月第4月曜日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearlyNth',
             ActivityDate = Date.newInstance(2024, 8, 1),
@@ -193,7 +198,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'August'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年10月1日 毎年10月第2月曜日',
+            Name = 'HolidayListTest 2024年10月1日 毎年10月第2月曜日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearlyNth',
             ActivityDate = Date.newInstance(2024, 10, 1),
@@ -204,7 +209,7 @@ private class HolidayListTest {
             RecurrenceMonthOfYear = 'October'
         ));
         holidayList.add(new Holiday(
-            Name = '2024年12月1日 毎年12月最終月曜日',
+            Name = 'HolidayListTest 2024年12月1日 毎年12月最終月曜日',
             IsAllDay = true, IsRecurrence = true,
             RecurrenceType = 'RecursYearlyNth',
             ActivityDate = Date.newInstance(2024, 12, 1),
@@ -244,7 +249,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE IsRecurrence = false
+             WHERE Name LIKE 'HolidayListTest%' AND IsRecurrence = false
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -260,7 +265,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursEveryWeekday'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursEveryWeekday'
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -280,7 +285,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursDaily'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursDaily'
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -301,7 +306,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursWeekly'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursWeekly'
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -325,7 +330,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursMonthly'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursMonthly'
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -345,7 +350,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursMonthlyNth'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursMonthlyNth'
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -367,7 +372,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursYearly'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursYearly'
         ];
         HolidayList holidayList = new HolidayList(l);
         
@@ -391,7 +396,7 @@ private class HolidayListTest {
             SELECT Id, Name, Description, ActivityDate, IsRecurrence, RecurrenceType, RecurrenceStartDate, RecurrenceEndDateOnly, 
                    RecurrenceDayOfMonth, RecurrenceDayOfWeekMask, RecurrenceInstance, RecurrenceInterval, RecurrenceMonthOfYear 
               FROM Holiday
-             WHERE RecurrenceType = 'RecursYearlyNth'
+             WHERE Name LIKE 'HolidayListTest%' AND RecurrenceType = 'RecursYearlyNth'
         ];
         HolidayList holidayList = new HolidayList(l);
 
@@ -405,5 +410,71 @@ private class HolidayListTest {
         Assert.isTrue(holidayList.isHoliday(Date.newInstance(2024, 8, 26)));
         Assert.isTrue(holidayList.isHoliday(Date.newInstance(2024, 12, 30)));
         Assert.isTrue(holidayList.isHoliday(Date.newInstance(2025, 10, 13))); // 1年後なので
+    }
+
+    // テストケース
+    // 例外が発生する
+    @isTest
+    static void testException() {
+        List<Holiday> l;
+        HolidayList holidayList;
+        l = new List<Holiday>();
+        l.add(new Holiday(
+            Name = 'RecurrenceType が想定外の値',
+            IsAllDay = true, IsRecurrence = true,
+            RecurrenceType = 'RecursXXXXXXX',
+            ActivityDate = Date.newInstance(2024, 5, 1),
+            RecurrenceStartDate = Date.newInstance(2024, 5, 1),
+            RecurrenceEndDateOnly = null,
+            RecurrenceDayOfWeekMask = 62
+        ));
+        holidayList = new HolidayList(l);
+        try {
+            holidayList.isHoliday(Date.newInstance(2024, 10, 9));
+            Assert.fail('IllegalArgumentException が発生しない');
+        } catch(IllegalArgumentException ex) {
+            System.debug('期待通りに例外が発生する');
+        }
+
+        l = new List<Holiday>();
+        l.add(new Holiday(
+            Name = 'RecurrenceInstance が想定外の値',
+            IsAllDay = true, IsRecurrence = true,
+            RecurrenceType = 'RecursYearlyNth',
+            ActivityDate = Date.newInstance(2025, 1, 1),
+            RecurrenceStartDate = Date.newInstance(2025, 1, 1),
+            RecurrenceEndDateOnly = null,
+            RecurrenceDayOfWeekMask = 8,
+            RecurrenceInstance = 'XXXXXX',
+            RecurrenceMonthOfYear = 'April'
+        ));
+        holidayList = new HolidayList(l);
+        try {
+            holidayList.isHoliday(Date.newInstance(2025, 1, 22));
+            Assert.fail('IllegalArgumentException が発生しない');
+        } catch(IllegalArgumentException ex) {
+            System.debug('期待通りに例外が発生する');
+        }
+
+        l = new List<Holiday>();
+        l.add(new Holiday(
+            Name = 'RecurrenceMonthOfYear が想定外の値',
+            IsAllDay = true, IsRecurrence = true,
+            RecurrenceType = 'RecursYearlyNth',
+            ActivityDate = Date.newInstance(2025, 1, 1),
+            RecurrenceStartDate = Date.newInstance(2025, 1, 1),
+            RecurrenceEndDateOnly = null,
+            RecurrenceDayOfWeekMask = 8,
+            RecurrenceInstance = 'Second',
+            RecurrenceMonthOfYear = 'XXXXXX'
+        ));
+        holidayList = new HolidayList(l);
+        try {
+            holidayList.isHoliday(Date.newInstance(2025, 1, 8));
+            Assert.fail('IllegalArgumentException が発生しない');
+        } catch(IllegalArgumentException ex) {
+            System.debug('期待通りに例外が発生する');
+        }
+
     }
 }
